DatalogParser.java
// Generated from Datalog.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DatalogParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IGUAL=1, DIFER=2, GUION=3, GUIONMEDIO=4, PUNTO=5, COMA=6, INTERROGA=7, 
		PARENTESISI=8, PARENTESISD=9, DOSPUNTOS=10, DOSPUNTOSGUION=11, ESQUEMAS=12, 
		HECHOS=13, REGLAS=14, CONSULTAS=15, MULT=16, SUMA=17, NEWLINE=18, INT=19, 
		TEXTO=20, COMENTARIO=21, ESC_TIPO_C=22, ID=23, WS=24;
	public static final int
		RULE_prog = 0, RULE_expr = 1, RULE_esquema = 2, RULE_listaesquemas = 3, 
		RULE_listaid = 4, RULE_hecho = 5, RULE_listahechos = 6, RULE_regla = 7, 
		RULE_listareglas = 8, RULE_cabezapredicado = 9, RULE_predicado = 10, RULE_listapredicados = 11, 
		RULE_parametro = 12, RULE_listaparametros = 13, RULE_expresion = 14, RULE_operador = 15, 
		RULE_consulta = 16, RULE_listaconsultas = 17, RULE_listastrings = 18, 
		RULE_select = 19;
	public static final String[] ruleNames = {
		"prog", "expr", "esquema", "listaesquemas", "listaid", "hecho", "listahechos", 
		"regla", "listareglas", "cabezapredicado", "predicado", "listapredicados", 
		"parametro", "listaparametros", "expresion", "operador", "consulta", "listaconsultas", 
		"listastrings", "select"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='", "'!='", "'~'", "'-'", "'.'", "','", "'?'", "'('", "')'", 
		"':'", "':-'", "'Schemes'", "'Facts'", "'Rules'", "'Queries'", "'*'", 
		"'+'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "IGUAL", "DIFER", "GUION", "GUIONMEDIO", "PUNTO", "COMA", "INTERROGA", 
		"PARENTESISI", "PARENTESISD", "DOSPUNTOS", "DOSPUNTOSGUION", "ESQUEMAS", 
		"HECHOS", "REGLAS", "CONSULTAS", "MULT", "SUMA", "NEWLINE", "INT", "TEXTO", 
		"COMENTARIO", "ESC_TIPO_C", "ID", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Datalog.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DatalogParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(DatalogParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(DatalogParser.NEWLINE, i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTERROGA) | (1L << ESQUEMAS) | (1L << HECHOS) | (1L << REGLAS) | (1L << CONSULTAS))) != 0)) {
				{
				{
				setState(40);
				expr();
				setState(41);
				match(NEWLINE);
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public TerminalNode ESQUEMAS() { return getToken(DatalogParser.ESQUEMAS, 0); }
		public TerminalNode DOSPUNTOS() { return getToken(DatalogParser.DOSPUNTOS, 0); }
		public EsquemaContext esquema() {
			return getRuleContext(EsquemaContext.class,0);
		}
		public ListaesquemasContext listaesquemas() {
			return getRuleContext(ListaesquemasContext.class,0);
		}
		public TerminalNode HECHOS() { return getToken(DatalogParser.HECHOS, 0); }
		public ListahechosContext listahechos() {
			return getRuleContext(ListahechosContext.class,0);
		}
		public TerminalNode REGLAS() { return getToken(DatalogParser.REGLAS, 0); }
		public ListareglasContext listareglas() {
			return getRuleContext(ListareglasContext.class,0);
		}
		public TerminalNode CONSULTAS() { return getToken(DatalogParser.CONSULTAS, 0); }
		public ConsultaContext consulta() {
			return getRuleContext(ConsultaContext.class,0);
		}
		public ListaconsultasContext listaconsultas() {
			return getRuleContext(ListaconsultasContext.class,0);
		}
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr);
		try {
			setState(65);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ESQUEMAS:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				match(ESQUEMAS);
				setState(49);
				match(DOSPUNTOS);
				setState(50);
				esquema();
				setState(51);
				listaesquemas();
				}
				break;
			case HECHOS:
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				match(HECHOS);
				setState(54);
				match(DOSPUNTOS);
				setState(55);
				listahechos();
				}
				break;
			case REGLAS:
				enterOuterAlt(_localctx, 3);
				{
				setState(56);
				match(REGLAS);
				setState(57);
				match(DOSPUNTOS);
				setState(58);
				listareglas();
				}
				break;
			case CONSULTAS:
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				match(CONSULTAS);
				setState(60);
				match(DOSPUNTOS);
				setState(61);
				consulta();
				setState(62);
				listaconsultas();
				}
				break;
			case INTERROGA:
				enterOuterAlt(_localctx, 5);
				{
				setState(64);
				select();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EsquemaContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(DatalogParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DatalogParser.ID, i);
		}
		public TerminalNode PARENTESISI() { return getToken(DatalogParser.PARENTESISI, 0); }
		public ListaidContext listaid() {
			return getRuleContext(ListaidContext.class,0);
		}
		public TerminalNode PARENTESISD() { return getToken(DatalogParser.PARENTESISD, 0); }
		public EsquemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_esquema; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).enterEsquema(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).exitEsquema(this);
		}
	}

	public final EsquemaContext esquema() throws RecognitionException {
		EsquemaContext _localctx = new EsquemaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_esquema);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(ID);
			setState(68);
			match(PARENTESISI);
			setState(69);
			match(ID);
			setState(70);
			listaid();
			setState(71);
			match(PARENTESISD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaesquemasContext extends ParserRuleContext {
		public EsquemaContext esquema() {
			return getRuleContext(EsquemaContext.class,0);
		}
		public ListaesquemasContext listaesquemas() {
			return getRuleContext(ListaesquemasContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(DatalogParser.NEWLINE, 0); }
		public ListaesquemasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaesquemas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).enterListaesquemas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).exitListaesquemas(this);
		}
	}

	public final ListaesquemasContext listaesquemas() throws RecognitionException {
		ListaesquemasContext _localctx = new ListaesquemasContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_listaesquemas);
		try {
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				esquema();
				setState(74);
				listaesquemas();
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaidContext extends ParserRuleContext {
		public TerminalNode COMA() { return getToken(DatalogParser.COMA, 0); }
		public TerminalNode ID() { return getToken(DatalogParser.ID, 0); }
		public ListaidContext listaid() {
			return getRuleContext(ListaidContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(DatalogParser.NEWLINE, 0); }
		public ListaidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).enterListaid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).exitListaid(this);
		}
	}

	public final ListaidContext listaid() throws RecognitionException {
		ListaidContext _localctx = new ListaidContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_listaid);
		try {
			setState(83);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				match(COMA);
				setState(80);
				match(ID);
				setState(81);
				listaid();
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HechoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DatalogParser.ID, 0); }
		public TerminalNode PARENTESISI() { return getToken(DatalogParser.PARENTESISI, 0); }
		public TerminalNode TEXTO() { return getToken(DatalogParser.TEXTO, 0); }
		public ListastringsContext listastrings() {
			return getRuleContext(ListastringsContext.class,0);
		}
		public TerminalNode PARENTESISD() { return getToken(DatalogParser.PARENTESISD, 0); }
		public TerminalNode PUNTO() { return getToken(DatalogParser.PUNTO, 0); }
		public HechoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hecho; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).enterHecho(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).exitHecho(this);
		}
	}

	public final HechoContext hecho() throws RecognitionException {
		HechoContext _localctx = new HechoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_hecho);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(ID);
			setState(86);
			match(PARENTESISI);
			setState(87);
			match(TEXTO);
			setState(88);
			listastrings();
			setState(89);
			match(PARENTESISD);
			setState(90);
			match(PUNTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListahechosContext extends ParserRuleContext {
		public HechoContext hecho() {
			return getRuleContext(HechoContext.class,0);
		}
		public ListahechosContext listahechos() {
			return getRuleContext(ListahechosContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(DatalogParser.NEWLINE, 0); }
		public ListahechosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listahechos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).enterListahechos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).exitListahechos(this);
		}
	}

	public final ListahechosContext listahechos() throws RecognitionException {
		ListahechosContext _localctx = new ListahechosContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_listahechos);
		try {
			setState(96);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				hecho();
				setState(93);
				listahechos();
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReglaContext extends ParserRuleContext {
		public CabezapredicadoContext cabezapredicado() {
			return getRuleContext(CabezapredicadoContext.class,0);
		}
		public TerminalNode DOSPUNTOSGUION() { return getToken(DatalogParser.DOSPUNTOSGUION, 0); }
		public PredicadoContext predicado() {
			return getRuleContext(PredicadoContext.class,0);
		}
		public ListapredicadosContext listapredicados() {
			return getRuleContext(ListapredicadosContext.class,0);
		}
		public TerminalNode PUNTO() { return getToken(DatalogParser.PUNTO, 0); }
		public ReglaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regla; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).enterRegla(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).exitRegla(this);
		}
	}

	public final ReglaContext regla() throws RecognitionException {
		ReglaContext _localctx = new ReglaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_regla);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			cabezapredicado();
			setState(99);
			match(DOSPUNTOSGUION);
			setState(100);
			predicado();
			setState(101);
			listapredicados();
			setState(102);
			match(PUNTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListareglasContext extends ParserRuleContext {
		public ReglaContext regla() {
			return getRuleContext(ReglaContext.class,0);
		}
		public ListareglasContext listareglas() {
			return getRuleContext(ListareglasContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(DatalogParser.NEWLINE, 0); }
		public ListareglasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listareglas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).enterListareglas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).exitListareglas(this);
		}
	}

	public final ListareglasContext listareglas() throws RecognitionException {
		ListareglasContext _localctx = new ListareglasContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_listareglas);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				regla();
				setState(105);
				listareglas();
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CabezapredicadoContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(DatalogParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DatalogParser.ID, i);
		}
		public TerminalNode PARENTESISI() { return getToken(DatalogParser.PARENTESISI, 0); }
		public ListaidContext listaid() {
			return getRuleContext(ListaidContext.class,0);
		}
		public TerminalNode PARENTESISD() { return getToken(DatalogParser.PARENTESISD, 0); }
		public CabezapredicadoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabezapredicado; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).enterCabezapredicado(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).exitCabezapredicado(this);
		}
	}

	public final CabezapredicadoContext cabezapredicado() throws RecognitionException {
		CabezapredicadoContext _localctx = new CabezapredicadoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cabezapredicado);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(ID);
			setState(111);
			match(PARENTESISI);
			setState(112);
			match(ID);
			setState(113);
			listaid();
			setState(114);
			match(PARENTESISD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicadoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DatalogParser.ID, 0); }
		public TerminalNode PARENTESISI() { return getToken(DatalogParser.PARENTESISI, 0); }
		public ParametroContext parametro() {
			return getRuleContext(ParametroContext.class,0);
		}
		public ListaparametrosContext listaparametros() {
			return getRuleContext(ListaparametrosContext.class,0);
		}
		public TerminalNode PARENTESISD() { return getToken(DatalogParser.PARENTESISD, 0); }
		public PredicadoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicado; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).enterPredicado(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).exitPredicado(this);
		}
	}

	public final PredicadoContext predicado() throws RecognitionException {
		PredicadoContext _localctx = new PredicadoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_predicado);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(ID);
			setState(117);
			match(PARENTESISI);
			setState(118);
			parametro();
			setState(119);
			listaparametros();
			setState(120);
			match(PARENTESISD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListapredicadosContext extends ParserRuleContext {
		public TerminalNode COMA() { return getToken(DatalogParser.COMA, 0); }
		public PredicadoContext predicado() {
			return getRuleContext(PredicadoContext.class,0);
		}
		public ListapredicadosContext listapredicados() {
			return getRuleContext(ListapredicadosContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(DatalogParser.NEWLINE, 0); }
		public ListapredicadosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listapredicados; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).enterListapredicados(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).exitListapredicados(this);
		}
	}

	public final ListapredicadosContext listapredicados() throws RecognitionException {
		ListapredicadosContext _localctx = new ListapredicadosContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_listapredicados);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				match(COMA);
				setState(123);
				predicado();
				setState(124);
				listapredicados();
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametroContext extends ParserRuleContext {
		public TerminalNode TEXTO() { return getToken(DatalogParser.TEXTO, 0); }
		public TerminalNode ID() { return getToken(DatalogParser.ID, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).enterParametro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).exitParametro(this);
		}
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_parametro);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TEXTO:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				match(TEXTO);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				match(ID);
				}
				break;
			case PARENTESISI:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				expresion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaparametrosContext extends ParserRuleContext {
		public TerminalNode COMA() { return getToken(DatalogParser.COMA, 0); }
		public ParametroContext parametro() {
			return getRuleContext(ParametroContext.class,0);
		}
		public ListaparametrosContext listaparametros() {
			return getRuleContext(ListaparametrosContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(DatalogParser.NEWLINE, 0); }
		public ListaparametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaparametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).enterListaparametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).exitListaparametros(this);
		}
	}

	public final ListaparametrosContext listaparametros() throws RecognitionException {
		ListaparametrosContext _localctx = new ListaparametrosContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_listaparametros);
		try {
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				match(COMA);
				setState(135);
				parametro();
				setState(136);
				listaparametros();
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionContext extends ParserRuleContext {
		public TerminalNode PARENTESISI() { return getToken(DatalogParser.PARENTESISI, 0); }
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public OperadorContext operador() {
			return getRuleContext(OperadorContext.class,0);
		}
		public TerminalNode PARENTESISD() { return getToken(DatalogParser.PARENTESISD, 0); }
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).enterExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).exitExpresion(this);
		}
	}

	public final ExpresionContext expresion() throws RecognitionException {
		ExpresionContext _localctx = new ExpresionContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_expresion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(PARENTESISI);
			setState(142);
			parametro();
			setState(143);
			operador();
			setState(144);
			parametro();
			setState(145);
			match(PARENTESISD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperadorContext extends ParserRuleContext {
		public TerminalNode SUMA() { return getToken(DatalogParser.SUMA, 0); }
		public TerminalNode MULT() { return getToken(DatalogParser.MULT, 0); }
		public OperadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogListener ) ((DatalogListener)listener).enterOperador(this);
		}
		@Override
